--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,34 @@
 language: rust
+sudo: false
 
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y curl sudo build-essential wget unzip
-#  - curl https://raw.githubusercontent.com/jayrambhia/Install-OpenCV/master/Ubuntu/2.4/opencv2_4_10.sh | sh
-  - curl https://gist.githubusercontent.com/dynamicguy/3d1fce8dae65e765f7c4/raw/ed0f14163d731331a7f7fa89fe8a2100895a4a95/install-opencv-2.4.11-in-ubuntu.sh | sh
+addons:
+  apt:
+    packages:
+      - curl
+      - build-essential
+      - wget
+      - unzip
+      - cmake
+      - git
+      - libgtk2.0-dev
+      - pkg-config
+      - libavcodec-dev
+      - libavformat-dev
+      - libswscale-dev
+      - python-dev
+      - python-numpy
+      - libtbb2
+      - libtbb-dev
+      - libjpeg-dev
+      - libpng-dev
+      - libtiff-dev
+      - libjasper-dev
+      - libdc1394-22-dev
+      - tree
+
+before_script:
+  - cd /tmp ; wget https://github.com/Itseez/opencv/archive/2.4.11.zip ; unzip 2.4.11.zip ; mv opencv-2.4.11 opencv
+  - cd /tmp/opencv ; mkdir release ; cd release ; cmake -D CMAKE_BUILD_TYPE=RELEASE .. ; make -j ; tree .
 
 rust:
   - stable
