--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
 
 before_script:
   - "cd /tmp ; wget https://github.com/Itseez/opencv/archive/2.4.11.zip ; unzip 2.4.11.zip ; mv opencv-2.4.11 opencv"
-  - "cd /tmp/opencv ; mkdir release ; cd release ; cmake -D CMAKE_BUILD_TYPE=RELEASE .. ; make && tree ."
+  - "cd /tmp/opencv ; mkdir release install; cd release ; cmake -D CMAKE_BUILD_TYPE=RELEASE -DBUILD_SHARED_LIBS=OFF -D CMAKE_INSTALL_PREFIX=/tmp/opencv/install .. ; make"
 
 rust:
   - stable
