--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,14 @@ env:
   PKG_CONFIG_PATH: /tmp/opencv/release/unix-install
 
 before_script:
-  - "cd /tmp ; wget https://github.com/Itseez/opencv/archive/2.4.11.zip ; unzip 2.4.11.zip ; mv opencv-2.4.11 opencv"
-  - "cd /tmp/opencv ; mkdir release install; cd release ; cmake -D CMAKE_BUILD_TYPE=RELEASE -DBUILD_SHARED_LIBS=OFF -D CMAKE_INSTALL_PREFIX=/tmp/opencv/install .. ; make install ; tree"
-  - cd /kali/opencv-rust
+  - "if [ ! -e /tmp/opencv ] ; then cd /tmp ; wget https://github.com/Itseez/opencv/archive/2.4.11.zip ; unzip 2.4.11.zip ; mv opencv-2.4.11 opencv ; cd /tmp/opencv ; mkdir release install; cd release ; cmake -D CMAKE_BUILD_TYPE=RELEASE -DBUILD_SHARED_LIBS=OFF -D CMAKE_INSTALL_PREFIX=/tmp/opencv/install .. ; make install ; tree ; fi"
+  - cd ; cd /kali/opencv-rust
   - pkg-config --cflags opencv
   - pkg-config --libs opencv
+
+cache:
+  directories:
+    - /tmp/opencv
 
 rust:
   - stable
