--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,7 @@ env:
   PKG_CONFIG_PATH: /tmp/opencv/release/unix-install
 
 before_script:
-  - pwd
-  - "if [ ! -e /tmp/opencv/install/lib ] ; then cd /tmp ; wget https://github.com/Itseez/opencv/archive/2.4.11.zip ; unzip 2.4.11.zip ; mv opencv-2.4.11 opencv ; cd /tmp/opencv ; mkdir release install; cd release ; cmake -D CMAKE_BUILD_TYPE=RELEASE -DBUILD_SHARED_LIBS=OFF -D CMAKE_INSTALL_PREFIX=/tmp/opencv/install .. ; make install ; fi"
+  - "if [ ! -e /tmp/opencv/install ] ; then cd /tmp ; rm -rf opencv ; wget https://github.com/Itseez/opencv/archive/2.4.11.zip ; unzip -q 2.4.11.zip ; mv opencv-2.4.11 opencv ; cd /tmp/opencv ; mkdir release install; cd release ; cmake -D CMAKE_BUILD_TYPE=RELEASE -DBUILD_SHARED_LIBS=OFF -D CMAKE_INSTALL_PREFIX=/tmp/opencv/install .. ; make install ; fi"
   - cd /home/travis/build/kali/opencv-rust
   - tree /tmp/opencv/
   - pkg-config --cflags opencv
