--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,12 @@ before_script:
   - gcc --version
 
 after_success:
-  - cargo doc
-  - curl https://raw.githubusercontent.com/kmcallister/travis-doc-upload/master/travis-doc-upload.sh | sh
+  - |
+    if [ "$CV" = 2.4.11 -a "TRAVIS_RUST_VERSION" = "stable" ]
+    then
+      cargo doc
+      curl https://raw.githubusercontent.com/kmcallister/travis-doc-upload/master/travis-doc-upload.sh | sh
+    fi
 
 cache:
   directories:
