tweak some more

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ before_script:
   - gcc --version
 
 after_success:
+  - echo $TRAVIS_RUST_VERSION
   - |
     if [ "$CV" = 2.4.11 -a "TRAVIS_RUST_VERSION" = "stable" ]
     then
