fix libc version, and discard (wrong) explicit type path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ name = "to_gray"
 path = "examples/video_to_gray.rs"
 
 [dependencies]
-libc = "*"
+libc = "0.2"
 
 [build-dependencies]
 pkg-config = "*"
