build with 1.8 to workaroung rustdoc issue with long names

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ before_script:
 after_success:
   - echo $TRAVIS_RUST_VERSION
   - |
-    if [ "$CV" = 2.4.12 -a "$TRAVIS_RUST_VERSION" = "stable" ]
+    if [ "$CV" = 2.4.12 -a "$TRAVIS_RUST_VERSION" = "1.8.0" ]
     then
       cargo doc
       curl https://raw.githubusercontent.com/kmcallister/travis-doc-upload/master/travis-doc-upload.sh | sh
@@ -65,6 +65,7 @@ cache:
     - /tmp/opencv
 
 rust:
+  - 1.8.0
   - stable
   - beta
   - nightly
