--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 keywords = [ "opencv", "vision" ]
 license = "WTFPL"
 version = "0.2.5-alpha.0"
+edition = "2018"
 authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
 build = "build.rs"
 
