--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/kali/opencv-rust"
 readme = "README.md"
 keywords = [ "opencv", "vision" ]
 license = "WTFPL"
-version = "0.2.5-alpha.0"
+version = "0.3.0"
 edition = "2018"
 authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
 build = "build.rs"
