--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ documentation = "http://www.poumeyrol.fr/doc/opencv-rust/opencv/index.html"
 repository = "https://github.com/kali/opencv-rust"
 readme = "README.md"
 keywords = [ "opencv", "vision" ]
-license = "WTFPL"
-version = "0.3.0"
+license = "MIT"
+version = "0.4.0"
 edition = "2018"
 authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
 build = "build.rs"
