--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,6 @@ addons:
       - tree
 
 env:
-#  global:
-#    - DOC=3.1.0
   matrix:
     - OPENCV_VERSION=3.4.6
 
@@ -50,32 +48,15 @@ before_script:
       cd opencv-$OPENCV_VERSION
       mkdir release install
       cd release
-      cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DCMAKE_INSTALL_PREFIX=/tmp/opencv/opencv-$OPENCV_VERSION/install ..
+      cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DCMAKE_INSTALL_PREFIX=/usr ..
       make -j4 install
     fi
   - tree /tmp/opencv/opencv-$OPENCV_VERSION/release
-  - export PKG_CONFIG_PATH=/tmp/opencv/opencv-$OPENCV_VERSION/release/unix-install
   - pkg-config --cflags opencv
   - pkg-config --libs opencv
   - gcc --version
   - cd /home/travis/build/twistedfall/opencv-rust
 
-#after_success:
-#  - echo $TRAVIS_RUST_VERSION
-#  - |
-#    if [ "$OPENCV_VERSION" = "$DOC" -a "$TRAVIS_RUST_VERSION" = "stable" ]
-#    then
-#      cargo doc
-#      curl https://raw.githubusercontent.com/kmcallister/travis-doc-upload/master/travis-doc-upload.sh | sh
-#    fi
-
-#cache:
-#  directories:
-#    - /tmp/opencv
-
 matrix:
   allow_failures:
     - rust: nightly
-#  include:
-#    - rust: stable
-#      env: OPENCV_VERSION=2.4.10
