try to fix travis build (4)

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_script:
       mkdir release install
       cd release
       cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DCMAKE_INSTALL_PREFIX=/usr ..
-      make -j4 install
+      sudo make -j4 install
     fi
   - tree /tmp/opencv/opencv-$OPENCV_VERSION/release
   - pkg-config --cflags opencv
