fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ addons:
       - libavcodec-dev
       - libavformat-dev
       - libswscale-dev
+      - libavresample-dev
       - python-dev
       - python-numpy
       - libtbb2
