--- a/.travis.yml
+++ b/.travis.yml
@@ -15,22 +15,24 @@ addons:
       - unzip
       - build-essential
       - cmake
-      - git
       - libgtk2.0-dev
       - pkg-config
       - libavcodec-dev
       - libavformat-dev
       - libswscale-dev
       - libavresample-dev
-      - python-dev
-      - python-numpy
-      - libtbb2
       - libtbb-dev
       - libjpeg-dev
       - libpng-dev
       - libtiff-dev
       - libjasper-dev
+      - libwebp-dev
+      - libopenexr-dev
       - libdc1394-22-dev
+      - libatlas-base-dev
+      - libeigen3-dev
+      - python-dev
+      - python-numpy
       - tree
 
 env:
@@ -49,7 +51,7 @@ before_script:
       cd opencv-$OPENCV_VERSION
       mkdir release install
       cd release
-      cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DPYTHON_EXECUTABLE=OFF -DINSTALL_PYTHON_EXAMPLES=OFF -DCMAKE_INSTALL_PREFIX=/usr ..
+      Atlas_ROOT_DIR=/usr/include/eigen3/Eigen/src/misc/ cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DPYTHON_EXECUTABLE=OFF -DINSTALL_PYTHON_EXAMPLES=OFF -DWITH_LAPACK=ON -DWITH_EIGEN=ON -DBUILD_SHARED_LIBS=ON -DWITH_TBB=ON -D OPENCV_ENABLE_NONFREE=ON -DCMAKE_INSTALL_PREFIX=/usr ..
       sudo make -j4 install
     fi
   - tree /tmp/opencv/opencv-$OPENCV_VERSION/release
