--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ addons:
       - libopenexr-dev
       - libdc1394-22-dev
       - libatlas-base-dev
+      - liblapacke-dev
       - libeigen3-dev
       - python-dev
       - python-numpy
@@ -51,7 +52,7 @@ before_script:
       cd opencv-$OPENCV_VERSION
       mkdir release install
       cd release
-      Atlas_ROOT_DIR=/usr/include/eigen3/Eigen/src/misc/ cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DPYTHON_EXECUTABLE=OFF -DINSTALL_PYTHON_EXAMPLES=OFF -DWITH_LAPACK=ON -DWITH_EIGEN=ON -DBUILD_SHARED_LIBS=ON -DWITH_TBB=ON -D OPENCV_ENABLE_NONFREE=ON -DCMAKE_INSTALL_PREFIX=/usr ..
+      Atlas_ROOT_DIR=/usr/include/ cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DPYTHON_EXECUTABLE=OFF -DINSTALL_PYTHON_EXAMPLES=OFF -DWITH_LAPACK=ON -DWITH_EIGEN=ON -DBUILD_SHARED_LIBS=ON -DWITH_TBB=ON -D OPENCV_ENABLE_NONFREE=ON -DCMAKE_INSTALL_PREFIX=/usr ..
       sudo make -j4 install
     fi
   - tree /tmp/opencv/opencv-$OPENCV_VERSION/release
