simplify travis build (2)

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,12 +39,13 @@ addons:
 env:
   matrix:
     - OPENCV_VERSION=3.4.6
+    - Atlas_ROOT_DIR=/usr/include/ # for cmake to find lapacke.h
 
 before_script:
-  - wget -q -O- https://github.com/opencv/opencv/archive/$OPENCV_VERSION.tar.gz | tar -xzC /home/travis/build
-  - mkdir -p /home/travis/build/opencv-$OPENCV_VERSION-build
-  - pushd /home/travis/build/opencv-$OPENCV_VERSION-build
-  - Atlas_ROOT_DIR=/usr/include/ cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DPYTHON_EXECUTABLE=OFF -DINSTALL_PYTHON_EXAMPLES=OFF -DWITH_LAPACK=ON -DWITH_EIGEN=ON -DBUILD_SHARED_LIBS=ON -DWITH_TBB=ON -DOPENCV_ENABLE_NONFREE=ON -DCMAKE_INSTALL_PREFIX=/usr /home/travis/build/opencv-$OPENCV_VERSION
+  - wget -q -O- https://github.com/opencv/opencv/archive/$OPENCV_VERSION.tar.gz | tar -xzC ~/build
+  - mkdir -p ~/build/opencv-$OPENCV_VERSION-build
+  - pushd ~/build/opencv-$OPENCV_VERSION-build
+  - cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DPYTHON_EXECUTABLE=OFF -DINSTALL_PYTHON_EXAMPLES=OFF -DWITH_LAPACK=ON -DWITH_EIGEN=ON -DBUILD_SHARED_LIBS=ON -DWITH_TBB=ON -DOPENCV_ENABLE_NONFREE=ON -DCMAKE_INSTALL_PREFIX=/usr ~/build/opencv-$OPENCV_VERSION
   - sudo make -j4 install
   - tree .
   - popd
