--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,9 @@ addons:
       - tree
 
 env:
-  - OPENCV_VERSION=3.4.6
-  - Atlas_ROOT_DIR=/usr/include/ # for cmake to find lapacke.h
+  global:
+    - OPENCV_VERSION=3.4.6
+    - Atlas_ROOT_DIR=/usr/include/ # for cmake to find lapacke.h
 
 before_script:
   - wget -q -O- https://github.com/opencv/opencv/archive/$OPENCV_VERSION.tar.gz | tar -xzC ~/build
