--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/twistedfall/opencv-rust"
 readme = "README.md"
 keywords = [ "opencv", "vision" ]
 license = "MIT"
-version = "0.7.2"
+version = "0.7.3"
 edition = "2018"
 authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
 build = "build.rs"
@@ -20,9 +20,10 @@ libc = "0.2"
 slab = "0.4"
 
 [build-dependencies]
-pkg-config = "0.3.14"
-cc = "1.0"
+cc = {version = "1.0", features = ["parallel"]}
 glob = "0.3"
+pkg-config = "0.3"
+rayon = "1.0"
 
 [features]
 buildtime_bindgen = []
