--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,10 @@ dist: xenial
 addons:
   apt:
     packages:
-      - wget
       - unzip
       - build-essential
       - cmake
       - libgtk2.0-dev
-      - pkg-config
       - libavcodec-dev
       - libavformat-dev
       - libswscale-dev
@@ -42,16 +40,16 @@ env:
     - Atlas_ROOT_DIR=/usr/include/ # for cmake to find lapacke.h
 
 before_script:
-  - wget -q -O- https://github.com/opencv/opencv/archive/$OPENCV_VERSION.tar.gz | tar -xzC ~/build
+  - wget -O- https://github.com/opencv/opencv/archive/$OPENCV_VERSION.tar.gz | tar -xzC ~/build
+  - wget -O- https://github.com/opencv/opencv_contrib/archive/$OPENCV_VERSION.tar.gz | tar -xzC ~/build
   - mkdir -p ~/build/opencv-$OPENCV_VERSION-build
   - pushd ~/build/opencv-$OPENCV_VERSION-build
-  - cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DPYTHON_EXECUTABLE=OFF -DINSTALL_PYTHON_EXAMPLES=OFF -DWITH_LAPACK=ON -DWITH_EIGEN=ON -DBUILD_SHARED_LIBS=ON -DWITH_TBB=ON -DOPENCV_ENABLE_NONFREE=ON -DCMAKE_INSTALL_PREFIX=/usr ~/build/opencv-$OPENCV_VERSION
+  - cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_PERF_TESTS=OFF -DBUILD_TESTS=OFF -DINSTALL_TESTS=OFF -DBUILD_DOCS=OFF -DBUILD_EXAMPLES=OFF -DBUILD_opencv_apps= -DWITH_IPP=OFF -DPYTHON_EXECUTABLE=OFF -DINSTALL_PYTHON_EXAMPLES=OFF -DWITH_LAPACK=ON -DWITH_EIGEN=ON -DBUILD_SHARED_LIBS=ON -DWITH_TBB=ON -DOPENCV_ENABLE_NONFREE=ON -DCMAKE_INSTALL_PREFIX=/usr -DOPENCV_EXTRA_MODULES_PATH=~/build/opencv_contrib-$OPENCV_VERSION/modules ~/build/opencv-$OPENCV_VERSION
   - sudo make -j4 install
   - tree .
   - popd
   - pkg-config --cflags opencv
   - pkg-config --libs opencv
-  - gcc --version
 
 matrix:
   allow_failures:
