--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ dist: xenial
 addons:
   apt:
     packages:
-      - unzip
       - build-essential
       - cmake
       - libgtk2.0-dev
@@ -45,7 +44,7 @@ env:
     - Atlas_ROOT_DIR=/usr/include/ # for cmake to find lapacke.h
 
 before_script:
-  - mkdir ~/build/opencv ; true
+  - mkdir -p ~/build/opencv
   - wget -O- https://github.com/opencv/opencv/archive/$OPENCV_VERSION.tar.gz | tar -xzC ~/build/opencv
   - wget -O- https://github.com/opencv/opencv_contrib/archive/$OPENCV_VERSION.tar.gz | tar -xzC ~/build/opencv
   - mkdir -p ~/build/opencv/opencv-$OPENCV_VERSION-build
