fix: temp disable 'gapi' headers
error message goes
'''
Generating module 'gapi' from headers:
    ...
Error at 159: argument contains ',' or '>' not within template arguments
'''

solution: opencv/opencv#13260

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ env:
     - Atlas_ROOT_DIR=/usr/include/ # for cmake to find lapacke.h
   matrix:
     - OPENCV_VERSION=3.4.6 OPENCV_PKGCONFIG=opencv BUILD_SHARD_LIBS=ON MORE_OPTIONS=""
-    - OPENCV_VERSION=4.1.0 OPENCV_PKGCONFIG=opencv4 BUILD_SHARD_LIBS=OFF MORE_OPTIONS="-DOPENCV_FORCE_3RDPARTY_BUILD=ON -DOPENCV_GENERATE_PKGCONFIG=ON"
+    - OPENCV_VERSION=4.1.0 OPENCV_PKGCONFIG=opencv4 BUILD_SHARD_LIBS=OFF MORE_OPTIONS="-DOPENCV_FORCE_3RDPARTY_BUILD=ON -DOPENCV_GENERATE_PKGCONFIG=ON -DWITH_ADE=OFF"
 
 before_script:
   - mkdir ~/build/opencv ; true
