--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ matches = "0.1"
 
 [features]
 default = ["opencv-34"]
-buildtime_bindgen = []
+buildtime-bindgen = []
 opencv-32 = []
 opencv-34 = []
 opencv-41 = []
