--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ slab = "0.4"
 [build-dependencies]
 cc = {version = "1.0", features = ["parallel"]}
 cpp_build = "0.5.3"
-glob = "0.3"
+glob_crate = {package = "glob", version = "0.3"}
 once_cell = "1.0"
 pkg-config = "0.3"
 rayon = "1.0"
