--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ once_cell = "1.0"
 pkg-config = "0.3"
 rayon = "1.0"
 semver = "0.9"
+which_crate = {package = "which", version = "3.0", default-features = false}
 
 [dev-dependencies]
 matches = "0.1"
