--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ travis-ci = { repository = "twistedfall/opencv-rust", branch = "master" }
 
 [dependencies]
 cpp = "0.5.3"
-lazy_static = "1.0"
 libc = "0.2"
 num = "0.2"
+once_cell = "1.0"
 slab = "0.4"
 
 [build-dependencies]
