--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,10 @@ rayon = "1.0"
 regex = "1.0"
 semver = "0.9"
 which_crate = {package = "which", version = "3.0", default-features = false}
+cfg-if = "0.1.10"
+
+[target.'cfg(target_env = "msvc")'.build-dependencies]
+vcpkg = "0.2.8"
 
 [dev-dependencies]
 matches = "0.1"
