--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,16 @@ cc = {version = "1.0", features = ["parallel"]}
 cpp_build = "0.5.3"
 glob_crate = {package = "glob", version = "0.3"}
 once_cell = "1.0"
-pkg-config = "0.3"
 rayon = "1.0"
 regex = "1.0"
 semver = "0.9"
 which_crate = {package = "which", version = "3.0", default-features = false}
+
+[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
+pkg-config = "0.3"
+
+[target.'cfg(target_env = "msvc")'.build-dependencies]
+vcpkg = "0.2"
 
 [dev-dependencies]
 matches = "0.1"
