--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ once_cell = "1.0"
 rayon = "1.0"
 regex = "1.0"
 semver = "0.9"
-which_crate = {package = "which", version = "3.0", default-features = false}
+which_crate = {package = "which", version = "3.0", optional = true, default-features = false}
 
 [target.'cfg(not(target_env = "msvc"))'.build-dependencies]
 pkg-config = "0.3"
@@ -45,7 +45,7 @@ matches = "0.1"
 
 [features]
 default = ["opencv-34"]
-buildtime-bindgen = []
+buildtime-bindgen = ["which_crate"]
 force-3rd-party-libs-discovery = []
 opencv-32 = []
 opencv-34 = []
