--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/twistedfall/opencv-rust"
 readme = "README.md"
 keywords = [ "opencv", "vision" ]
 license = "MIT"
-version = "0.27.0"
+version = "0.27.1"
 edition = "2018"
 authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Pro <twisted.fall@gmail.com>"]
 build = "build.rs"
@@ -31,7 +31,7 @@ glob_crate = {package = "glob", version = "0.3"}
 once_cell = "1.0"
 rayon = "1.0"
 semver = "0.9"
-which_crate = {package = "which", version = "3.0", optional = true, default-features = false}
+which_crate = {package = "which", version = "3.0", default-features = false}
 
 [target.'cfg(not(target_env = "msvc"))'.build-dependencies]
 pkg-config = "0.3"
@@ -44,7 +44,7 @@ matches = "0.1"
 
 [features]
 default = ["opencv-34"]
-buildtime-bindgen = ["which_crate"]
+buildtime-bindgen = []
 force-3rd-party-libs-discovery = []
 opencv-32 = []
 opencv-34 = []
