--- a/.travis.yml
+++ b/.travis.yml
@@ -25,15 +25,15 @@ matrix:
   fast_finish: true
   include:
     - os: linux
-      env: OPENCV_VERSION=3.2.0 OPENCV_PKGCONFIG=opencv CARGO_FEATURES=opencv-32
+      env: OPENCV_VERSION=3.2.0 CARGO_FEATURES=opencv-32
       rust: stable
 
 env:
   global:
     - Atlas_ROOT_DIR=/usr/include/ # for cmake to find lapacke.h
   matrix:
-    - OPENCV_VERSION=3.4.8 CHOCO_OPENCV_VERSION=3.4.8 OSX_OPENCV_VERSION=@3 OPENCV_PKGCONFIG=opencv CARGO_FEATURES=opencv-34
-    - OPENCV_VERSION=4.1.2 CHOCO_OPENCV_VERSION=4.1.2 OSX_OPENCV_VERSION= OPENCV_PKGCONFIG=opencv4 CARGO_FEATURES=opencv-41
+    - OPENCV_VERSION=3.4.8 CHOCO_OPENCV_VERSION=3.4.8 OSX_OPENCV_VERSION=@3 CARGO_FEATURES=opencv-34
+    - OPENCV_VERSION=4.1.2 CHOCO_OPENCV_VERSION=4.1.2 OSX_OPENCV_VERSION= CARGO_FEATURES=opencv-41
 
 addons:
   apt:
