--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ glob_crate = {package = "glob", version = "0.3"}
 once_cell = "1.0"
 rayon = "1.0"
 semver = "0.9"
-binding-generator = {path = "binding-generator", optional = true}
+binding-generator = {package = "opencv-binding-generator", version = "0.1", path = "binding-generator", optional = true}
 clang = {version = "0.23", features = ["clang_6_0"], optional = true}
 
 [target.'cfg(not(target_env = "msvc"))'.build-dependencies]
