--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,15 @@ repository = "https://github.com/twistedfall/opencv-rust"
 readme = "README.md"
 keywords = ["opencv", "vision"]
 license = "MIT"
-version = "0.30.1"
+version = "0.31.0"
 edition = "2018"
 authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Pro <twisted.fall@gmail.com>"]
 
 [lib]
 doctest = false
+
+[badges]
+maintenance = { status = "actively-developed" }
 
 [workspace]
 members = ["binding-generator"]
@@ -37,7 +40,7 @@ glob_crate = {package = "glob", version = "0.3"}
 once_cell = "1.0"
 rayon = "1.0"
 semver = "0.9"
-binding-generator = {package = "opencv-binding-generator", version = "0.1", path = "binding-generator", optional = true}
+binding-generator = {package = "opencv-binding-generator", version = "0.2", path = "binding-generator", optional = true}
 clang = {version = "0.23", features = ["clang_6_0"], optional = true}
 
 [target.'cfg(not(target_env = "msvc"))'.build-dependencies]
